syntax = "proto3";
package proto;
message GetTokenRequest{
  uint32 uid = 1;
}

message GetTokenResponse{
  string token = 1;
  string msg = 2;
}

message ParseTokenRequest{
  string token = 1;
}

message ParseTokenResponse{
  uint32 uid = 1;
  string msg = 2;
}

service TokenService{
  rpc GetToken(GetTokenRequest) returns(GetTokenResponse);
  rpc ParseToken(ParseTokenRequest) returns(ParseTokenResponse);
}
